fix templates on mobile

--- a/shared/components/Footer/Footer.scss
+++ b/shared/components/Footer/Footer.scss
@@ -61,3 +61,10 @@ $information-footer-height: 44px;
     color: rgba(51, 51, 51, 0.6)
   }
 }
+
+@include media-mobile {
+  .footer {
+    position: relative;
+    margin-bottom: 20px;
+  }
+}
