--- a/shared/components/Header/Header.scss
+++ b/shared/components/Header/Header.scss
@@ -20,3 +20,9 @@
   display: flex;
   align-items: center;
 }
+
+@include media-mobile {
+	.header {
+		display: flex;
+	}
+}
