--- a/shared/components/PageHeadline/PageHeadline.scss
+++ b/shared/components/PageHeadline/PageHeadline.scss
@@ -1,3 +1,9 @@
 .headline {
   padding: 30px 0 40px;
 }
+
+@include media-tablet-landscape-and-lower {
+  .headline {
+    padding: 10px 0 0;
+  } 
+}
