--- a/shared/components/SearchSwap/SearchSwap.scss
+++ b/shared/components/SearchSwap/SearchSwap.scss
@@ -23,3 +23,21 @@
   margin-bottom: 0px;
   margin-right: 25px;
 }
+
+@media screen and (max-width: 690px) {
+  .choice {
+    flex-wrap: wrap;
+    margin-top: 20px;
+  }
+
+  .row {
+    width: 100%;
+    justify-content: center;
+    margin-bottom: 15px;
+
+    &:last-child {
+      justify-content: center;
+      margin-left: 0;
+    }
+  }
+}
